--- a/estoque.html
+++ b/estoque.html
@@ -174,7 +174,8 @@
                             <th scope="col">Fantasia</th>
                             <th scope="col">Celular</th>
                             <th scope="col">Telefone</th>
-                            <th scope="col">Email</th>                 
+                          <!--<th scope="col">Email</th> --> 
+                            <th scope="col">Status</th>                     
                             <th scope="col">Editar</th>                        
                           </tr>
                         </thead>
@@ -397,7 +398,7 @@
                       <div class="form-group col-md-3">
 
                         <label for="statusFornecedor">Status</label>
-                        <select class="form-control" name="statusFornecedor id=" statusFornecedor">
+                        <select class="form-control" name="statusFornecedor" id="statusFornecedor">
                           <option value="Ativo">Ativo</option>
                           <option value="Inativo">Inativo</option>
                         </select>
