--- a/estoque.html
+++ b/estoque.html
@@ -383,7 +383,7 @@
 
                       <div class="offset-md-9 col-md-1 offset-7 col-1" id="checkboxFornecedor">
                         <div class="form-group text-center">
-                          <small for="excluirFornecedor" class=" "> Excluir</small>
+                          <small for="#excluir_Fornecedor" class=" "> Excluir</small>
                           <button class="btn btn-danger" type="button" id="excluir_Fornecedor">
                             <i class="fas fa-trash"></i>
                           </button>
