inicial painel querrys

--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
       <ul class="list-unstyled navbar__list">
         <li class="has-sub">
           <a href="index.html">
-            <i class="fas fa-tachometer-alt text-white"></i>Dashboard</a>
+            <i class="fas fa-tachometer-alt text-white"></i>Painel de Controle</a>
           <!--
           <ul class="list-unstyled navbar__sub-list js-sub-list">
             <li>
