updade painel de controle

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <!-- Main CSS-->
   <link href="css/theme.css" rel="stylesheet" media="all" />
+  <link href="css/painel.css" rel="stylesheet" media="all" />
 </head>
 
 <body class="animsition">
@@ -55,7 +56,7 @@
       <!-- MAIN CONTENT-->
       <div class="main-content">
         <div class="section__content section__content--p30">
-          <div class="container-fluid">
+          <div class="container-fluid altura-painel">
             <div class="row">
               <div class="col-md-12">
                 <div class="overview-wrap">
@@ -73,7 +74,7 @@
                         <i class="zmdi zmdi-account-o"></i>
                       </div>
                       <div class="text">
-                        <h2>368</h2>
+                        <h2 id="painel_clientes"></h2>
                         <span>Clientes</span>
                       </div>
                     </div>
@@ -216,7 +217,7 @@
               </div>
             </div>
           </div>
-          
+
           <footer class="footer navbar-fixed-bottom mt-5">
             <div class="row  bg-black">
               <div class="col-md-12 ">
