--- a/navbar-mobile.html
+++ b/navbar-mobile.html
@@ -18,7 +18,8 @@
             <ul class="navbar-mobile__list list-unstyled">
                 <li class="has-sub">
                     <a href="index.html" class=" text-white">
-                        <i class="fas fa-tachometer-alt"></i>Dashboard</a>
+                        <i class="fas fa-tachometer-alt"></i>Painel de Controle
+                    </a>
                 </li>
                 <li>
                     <a href="vendas.html" class="text-white">
@@ -27,29 +28,30 @@
                     </a>
                 </li>
                 <li>
-                    <a href="estoque.html" class=" text-white"> <i class="fas fa-box"></i>Estoque</a>
+                    <a href="estoque.html" class="text-white"> <i class="fas fa-box"></i>Estoque</a>
                 </li>
                 <li>
-                    <a href="cliente.html" class=" text-white"> <i class="fas fa-user"></i>Clientes</a>
-                </li>
-              <!--  <li>
-                    <a href="chart.html" class=" text-white">
-                        <i class="fas fa-chart-bar"></i>
-                        Gráficos
+                    <a href="#" class=" text-white"> <i class="fas fa-user"></i>
+                        Clientes
+                        <span class="badge badge-pill badge-warning">Em Breve</span>
                     </a>
                 </li>
-                  <li>
-                    <a href="form.html" class=" text-white">
-                        <i class="far fa-check-square"></i>Formulários</a>
+                <li>
+                    <a href="#" class=" text-white"> 
+                        <i class="fas fa-chart-bar"></i>
+                        Gráficos
+                        <span class="badge badge-pill badge-warning">Em Breve</span>
+                    </a>
                 </li>
-            -->
                 <li>
                     <a href="table.html" class=" text-white"> <i class="fas fa-table"></i>Tabelas</a>
                 </li>
-              
+
                 <li>
-                    <a href="calendar.html" class=" text-white">
-                        <i class="fas fa-calendar-alt"></i>Calendario</a>
+                    <a href="#" class=" text-white">
+                        <i class="fas fa-calendar-alt"></i>Calendario
+                        <span class="badge badge-pill badge-warning">Em Breve</span>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -72,5 +74,4 @@
     } catch (error) {
         console.log(error);
     }
-
 </script>
