--- a/menu.html
+++ b/menu.html
@@ -37,89 +37,25 @@
         </li>
 
         <li>
-          <a href="table.html"> <i class="fas fa-user"></i>Clientes</a>
+          <a href="#"> <i class="fas fa-user"></i>Clientes  <span class="badge badge-pill badge-warning">Em Breve</span>
+          </a>
+        
         </li>
         <li>
-          <a href="chart.html"> <i class="fas fa-chart-bar"></i>Gráficos</a>
+          <a href="#"> <i class="fas fa-chart-bar"></i>Gráficos             
+            <span class="badge badge-pill badge-warning">Em Breve</span>
+          </a>
         </li>
         <li>
           <a href="table.html"> <i class="fas fa-table"></i>Tabelas</a>
         </li>
         
         <li>
-          <a href="calendar.html">
-            <i class="fas fa-calendar-alt"></i>Calendario</a>
+          <a href="#">
+            <i class="fas fa-calendar-alt"></i>Calendario
+            <span class="badge badge-pill badge-warning">Em Breve</span>
+          </a>
         </li>
-        <!--
-          <li>
-          <a href="form.html">
-            <i class="far fa-check-square"></i>Formularios</a>
-        </li>
-        <li>
-          <a href="map.html">
-            <i class="fas fa-map-marker-alt"></i>Mapa</a>
-        </li>
-        <li class="has-sub">
-          <a class="js-arrow" href="#">
-            <i class="fas fa-copy"></i>Páginas</a>
-          <ul class="list-unstyled navbar__sub-list js-sub-list">
-            <li>
-              <a href="produtos.html">Produtos</a>
-            </li>
-            <li>
-              <a href="login.html">Login</a>
-            </li>
-            <li>
-              <a href="produtos.html">Produtos</a>
-            </li>
-            <li>
-              <a href="register.html">Register</a>
-            </li>
-            <li>
-              <a href="forget-pass.html">Forget Password</a>
-            </li>
-          </ul>
-        </li>
-        <li class="has-sub">
-          <a class="js-arrow" href="#">
-            <i class="fas fa-desktop"></i>UI Elements</a>
-          <ul class="list-unstyled navbar__sub-list js-sub-list">
-            <li>
-              <a href="button.html">Button</a>
-            </li>
-            <li>
-              <a href="badge.html">Badges</a>
-            </li>
-            <li>
-              <a href="tab.html">Tabs</a>
-            </li>
-            <li>
-              <a href="card.html">Cards</a>
-            </li>
-            <li>
-              <a href="alert.html">Alerts</a>
-            </li>
-            <li>
-              <a href="progress-bar.html">Progress Bars</a>
-            </li>
-            <li>
-              <a href="modal.html">Modals</a>
-            </li>
-            <li>
-              <a href="switch.html">Switchs</a>
-            </li>
-            <li>
-              <a href="grid.html">Grids</a>
-            </li>
-            <li>
-              <a href="fontawesome.html">Fontawesome Icon</a>
-            </li>
-            <li>
-              <a href="typo.html">Typography</a>
-            </li>
-          </ul>
-        </li>
-        -->
       </ul>
     </nav>
   </div>
