updade backgroud grafico1

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       </div>
                       <div class="text">
                         <h2 id="painel_clientes"></h2>
-                        <span>Clientes</span>
+                        <span class="font-weight-bold">Clientes</span>
                       </div>
                     </div>
                     <div class="overview-chart">
