--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         <i class="zmdi zmdi-shopping-cart"></i>
                       </div>
                       <div class="text">
-                        <h2>88</h2>
-                        <span>Produtos</span>
+                        <h2 id="painel_produtos"></h2>
+                        <span class="font-weight-bold">Produtos</span>
                       </div>
                     </div>
                     <div class="overview-chart">
@@ -103,25 +103,25 @@
                 </div>
               </div>
               <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c4">
+                <div class="overview-item overview-item--c3">
                   <div class="overview__inner">
                     <div class="overview-box clearfix">
                       <div class="icon">
-                        <i class="zmdi zmdi-money"></i>
+                        <i class="zmdi zmdi-bike"></i>
                       </div>
                       <div class="text">
-                        <h2>25</h2>
-                        <span>Entregas</span>
+                        <h2 id="painel_vendas"></h2>
+                        <span class="font-weight-bold">Vendas</span>
                       </div>
                     </div>
                     <div class="overview-chart">
-                      <canvas id="widgetChart4"></canvas>
+                      <canvas id="widgetChart3"></canvas>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c3">
+                <div class="overview-item overview-item--c33">
                   <div class="overview__inner">
                     <div class="overview-box clearfix">
                       <div class="icon">
