updade estoque a pagar

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                       </div>
                       <div class="text">
                         <h2 id="painel_vendas"></h2>
-                        <span class="font-weight-bold">Vendas</span>
+                        <span class="font-weight-bold">Pedidos</span>
                       </div>
                     </div>
                     <div class="overview-chart">
@@ -121,19 +121,19 @@
                 </div>
               </div>
               <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c33">
+                <div class="overview-item overview-item--c4">
                   <div class="overview__inner">
                     <div class="overview-box clearfix">
                       <div class="icon">
-                        <i class="zmdi zmdi-calendar-note"></i>
+                        <i class="zmdi zmdi-money"></i>
                       </div>
                       <div class="text">
-                        <h2>1,086</h2>
-                        <span>Vendas</span>
+                        <h2 id="painel_vendas_total"></h2>
+                        <span class="font-weight-bold">Vendas</span>
                       </div>
                     </div>
                     <div class="overview-chart">
-                      <canvas id="widgetChart3"></canvas>
+                      <canvas id="widgetChart4"></canvas>
                     </div>
                   </div>
                 </div>
@@ -142,7 +142,7 @@
             <div class="row m-t-25">
               <!---->
               <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c1">
+                <div class="overview-item overview-item--c5">
                   <div class="overview__inner">
                     <div class="overview-box clearfix">
                       <div class="icon">
@@ -150,12 +150,12 @@
                         <!-- <i class="zmdi zmdi-account-o"></i> -->
                       </div>
                       <div class="text">
-                        <h2>$ $ $</h2>
-                        <span>A Pagar</span>
+                        <h2 id="painel_valor_apagar"></h2>
+                        <span class="font-weight-bold"> Pago </span>
                       </div>
                     </div>
                     <div class="overview-chart">
-                      <canvas id="widgetChart1"></canvas>
+                      <canvas id="widgetChart5"></canvas>
                     </div>
                   </div>
                 </div>
