--- a/vendas.html
+++ b/vendas.html
@@ -307,6 +307,7 @@
                     </button>
                   </div>
                   <div class="modal-body m-5">
+                    <h3 class="text-center">Confirmar Venda?</h3>
                     <div class="gif" id="gif"></div>
                   </div>
 
