--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                         <!-- <i class="zmdi zmdi-account-o"></i> -->
                       </div>
                       <div class="text">
-                        <h2 id="painel_valor_apagar"></h2>
-                        <span class="font-weight-bold"> Pago </span>
+                        <h2 id="painel_valor_pago"></h2>
+                        <span class="font-weight-bold">A Pagar </span>
                       </div>
                     </div>
                     <div class="overview-chart">
@@ -161,7 +161,7 @@
                 </div>
               </div>
               <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c2">
+                <div class="overview-item overview-item--c6">
                   <div class="overview__inner">
                     <div class="overview-box clearfix">
                       <div class="icon">
@@ -169,12 +169,12 @@
                         <!-- <i class="zmdi zmdi-shopping-cart"></i> -->
                       </div>
                       <div class="text">
-                        <h2>$ $ $</h2>
-                        <span>A Receber</span>
+                        <h2 id="painel_valor_receber"></h2>
+                        <span class="font-weight-bold">A Receber</span>
                       </div>
                     </div>
                     <div class="overview-chart">
-                      <canvas id="widgetChart2"></canvas>
+                      <canvas id="widgetChart6"></canvas>
                     </div>
                   </div>
                 </div>
