finalizando painel de controle

--- a/index.html
+++ b/index.html
@@ -180,37 +180,37 @@
                 </div>
               </div>
               <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c3">
+                <div class="overview-item overview-item--c7">
                   <div class="overview__inner">
                     <div class="overview-box clearfix">
                       <div class="icon">
-                        <i class="zmdi zmdi-calendar-note"></i>
+                        <i class="zmdi zmdi-truck"></i>
                       </div>
                       <div class="text">
-                        <h2>* * *</h2>
-                        <span>Estoque</span>
+                        <h2 id="painel_estoque_listar"></h2>
+                        <span class="font-weight-bold">Estoque</span>
                       </div>
                     </div>
                     <div class="overview-chart">
-                      <canvas id="widgetChart3"></canvas>
+                      <canvas id="widgetChart7"></canvas>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c4">
+                <div class="overview-item overview-item--c8">
                   <div class="overview__inner">
                     <div class="overview-box clearfix">
                       <div class="icon">
                         <i class="zmdi zmdi-money"></i>
                       </div>
                       <div class="text">
-                        <h2>$60,386</h2>
-                        <span>Lucro</span>
+                        <h2 id="painel_estoque_lucro"></h2>
+                        <span class="font-weight-bold">Lucro</span>
                       </div>
                     </div>
                     <div class="overview-chart">
-                      <canvas id="widgetChart4"></canvas>
+                      <canvas id="widgetChart8"></canvas>
                     </div>
                   </div>
                 </div>
@@ -222,12 +222,12 @@
             <div class="row  bg-black">
               <div class="col-md-12 ">
                 <div class="copyright ">
-                  <p>
+                  <small class="text-white">
                     Copyright © 2020 KD. All rights reserved. <br>
                     <span class="text-info">KD</span>
                     <span class="text-info">S</span>istema
                     <span class="text-info">G</span>erenciador
-                  </p>
+                  </small>
                 </div>
               </div>
             </div>
