--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -28,17 +28,17 @@
                 <a class="js-acc-btn text-white" href="#" id="usuario_nome"></a>
               </div>
               <div class="account-dropdown js-dropdown" style="border:1px solid black">
-                <div class="info clearfix " style="background-color: rgb(204, 204, 204);">
+                <div class="info clearfix bg-black">
                   <div class="image bg-white">
                     <a href="#">
                       <div class="usuario_foto "></div>
                     </a>
                   </div>
-                  <div class="content">
+                  <div class="content text-white">
                     <h5 class="name">
-                      <a class="usuario_nome" name="usuario_nome"></a>
+                      <a class="usuario_nome text-white" name="usuario_nome"></a>
                     </h5>
-                    <span class="usuario_email" name="usuario_email"></span>
+                    <span class="usuario_email text-white" name="usuario_email"></span>
                   </div>
                 </div>
                 <div class="account-dropdown__body">
@@ -46,17 +46,7 @@
                     <a href="#">
                       <i class="zmdi zmdi-account"></i>Conta</a>
                   </div>
-                  <!--
-                    <div class="account-dropdown__item">
-                      <a href="#">
-                        <i class="zmdi zmdi-settings"></i>Setting</a>
-                    </div>
-                    <div class="account-dropdown__item">
-                      <a href="#">
-                        <i class="zmdi zmdi-money-box"></i>Billing</a>
-                    </div>
-                  </div>
-                  -->
+
                   <div class="account-dropdown__footer">
                     <a href="#" id="logout"> <i class="zmdi zmdi-power"></i>Logout</a>
                   </div>
