--- a/navbar-mobile.html
+++ b/navbar-mobile.html
@@ -1,11 +1,11 @@
-<header class="header-mobile d-block d-lg-none">
+<header class="header-mobile d-block d-lg-none ">
     <div class="header-mobile__bar bg-black">
-        <div class="container-fluid ">
+        <div class="">
             <div class="header-mobile-inner">
                 <a class="logo pl-5" href="index.html">
                     <img src="./images/kd_sistema_blue.png" alt="KD Gerenciador" style="width: 200px; height: auto;" />
                 </a>
-                <button class="hamburger hamburger--slider" type="button">
+                <button class="hamburger hamburger--slider mr-4" type="button">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
                     </span>
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-    <nav class="navbar-mobile text-white">
+    <nav class="navbar-mobile text-white  ">
         <div class="container-fluid">
             <ul class="navbar-mobile__list list-unstyled">
                 <li class="has-sub">
@@ -31,20 +31,22 @@
                     <a href="estoque.html" class="text-white"> <i class="fas fa-box"></i>Estoque</a>
                 </li>
                 <li>
+                    <a href="table.html" class=" text-white"> <i class="fas fa-table"></i>Tabelas</a>
+                </li>
+
+                <li>
                     <a href="#" class=" text-white"> <i class="fas fa-user"></i>
                         Clientes
                         <span class="badge badge-pill badge-warning">Em Breve</span>
                     </a>
                 </li>
+
                 <li>
-                    <a href="#" class=" text-white"> 
+                    <a href="#" class=" text-white">
                         <i class="fas fa-chart-bar"></i>
                         Gráficos
                         <span class="badge badge-pill badge-warning">Em Breve</span>
                     </a>
-                </li>
-                <li>
-                    <a href="table.html" class=" text-white"> <i class="fas fa-table"></i>Tabelas</a>
                 </li>
 
                 <li>
