update form clientes

--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,8 @@
         </li>
         
         <li>
-          <a href="#"> <i class="fas fa-user"></i>Clientes  <span class="badge badge-pill badge-warning">Em Breve</span>
+          <a href="clientes.html"> <i class="fas fa-user"></i>Clientes 
+             <span class="badge badge-pill badge-warning">Em Breve</span>
           </a>
         
         </li>
