updade cliente form

--- a/estoque.html
+++ b/estoque.html
@@ -236,7 +236,7 @@
                             <th scope="col">Valor</th>
                             <th scope="col">Quant.</th>
                             <th scope="col">Categoria</th>
-                            <th scope="col">Forncedor</th>
+                            <th scope="col">Fornecedor</th>
                             <th scope="col">Editar</th>
                           </tr>
                         </thead>
