updade cliente form

--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,10 @@
         </li>
 
         <li>
-          <a href="clientes.html"> <i class="fas fa-user"></i>Clientes</a>
+          <a href="clientes.html"> <i class="fas fa-user"></i>Clientes
+            <span class="badge badge-pill badge-success">Novo</span>
+          </a>
+
         </li>
 
         <li>
