--- a/clientes.html
+++ b/clientes.html
@@ -33,7 +33,7 @@
 
   <!-- Main CSS-->
   <link href="./css/theme.css" rel="stylesheet" media="all" />
-
+  <link href="./css/cliente.css" rel="stylesheet" media="all" />
   <!-- Jquery JS-->
   <script src="./vendor/jquery-3.2.1.min.js"></script>
 
@@ -68,86 +68,115 @@
                   <h2 class="text-center text-white p-2 ">Cadastro Cliente</h2>
 
                 </div>
-                <form action="" method="post">
+                <form action="" method="post" id="formCliente">
                   <div class="balcao-form pt-2" style="border: 1px solid grey;">
-                    <div class="">
 
-                      <div class="section__content section__content--p30">
-                        <div class="container-fluid">
-                          <div class="row">
-                            <div class="form-group col-md-6">
-                              <label>Cliente</label>
-                              <input class="au-input au-input--full" type="text" name="cliente"
-                                placeholder="Nome Cliente">
-                            </div>
-                            <div class="form-group col-md-6">
-                              <label>E-mail</label>
-                              <input class="au-input au-input--full" type="text" name="email" placeholder="E-mail">
-                            </div>
+
+                    <div class="section__content section__content--p30">
+                      <div class="container-fluid">
+                        <div class="row">
+                          <div class="form-group col-md-6">
+                            <label>Cliente</label>
+                            <input class="au-input au-input--full" type="text" name="cliente" placeholder="Nome Cliente"
+                              id="nome">
                           </div>
-                          <div class="row">
-                            <div class="form-group col-md-6">
-                              <label>Endereço</label>
-                              <input class="au-input au-input--full" type="text" name="rua" placeholder="Rua">
-                            </div>
-
-                            <div class="form-group col-md-6">
-                              <label>Complemento</label>
-                              <input class="au-input au-input--full" type="text" name="coplemento"
-                                placeholder="Complemento">
-                            </div>
-
+                          <div class="form-group col-md-6">
+                            <label>E-mail</label>
+                            <input class="au-input au-input--full" type="text" name="email" placeholder="E-mail"
+                              id="email">
                           </div>
-                          <div class="row">
-                            <div class="form-group col-md-3">
-                              <label>Bairro</label>
-                              <input class="au-input au-input--full" type="text" name="bairro" placeholder="Bairro">
-                            </div>
-                            <div class="form-group col-md-3">
-                              <label>Cidade</label>
-                              <input class="au-input au-input--full" type="number" name="cidade" placeholder="Cidade">
-                            </div>
-                            <div class="form-group col-md-3">
-                              <label>Número</label>
-                              <input class="au-input au-input--full" type="number" name="numero" placeholder="Número">
-                            </div>
-                            <div class="form-group col-md-3">
-                              <label>CEP</label>
-                              <input class="au-input au-input--full" type="number" name="cep" placeholder="CEP">
-                            </div>
-
+                        </div>
+                        <div class="row">
+                          <div class="form-group col-md-3">
+                            <label>CEP</label>
+                            <input class="au-input au-input--full" type="text" name="cep" placeholder="CEP" id="cep">
                           </div>
 
-                          <div class="row">
-                            <div class="form-group col-md-3  col-6">
-                              <label>Celular</label>
-                              <input class="au-input au-input--full" type="text" name="Celular" placeholder="Celular">
-                            </div>
+                          <div class="form-group col-md-3">
+                            <label>Número</label>
+                            <input class="au-input au-input--full" type="text" name="numero" placeholder="Número"
+                              id="numero">
+                          </div>
+                          <div class="form-group col-md-6">
+                            <label>Endereço</label>
+                            <input class="au-input au-input--full" type="text" name="rua" placeholder="Rua"
+                              id="endereco">
+                          </div>
+                        </div>
 
-                            <div class="form-group col-md-3  col-6">
-                              <label>Telefone</label>
-                              <input class="au-input au-input--full" type="text" name="Telefone" placeholder="Telefone">
-                            </div>
+                        <div class="row">
+                          <div class="form-group col-md-5">
+                            <label>Bairro</label>
+                            <input class="au-input au-input--full" type="text" name="bairro" placeholder="Bairro"
+                              id="bairro">
+                          </div>
+                          <div class="form-group col-md-4">
+                            <label>Cidade</label>
+                            <input class="au-input au-input--full" type="text" name="cidade" placeholder="Cidade"
+                              id="cidade">
+                          </div>
+                          <div class="form-group col-md-3">
+                            <label>UF</label>
+                            <input class="au-input au-input--full" type="text" name="Uf" placeholder="UF" id="uf">
                           </div>
 
-                          <div class="form-group row justify-content-center text-center mt-5 ">
-                            <button type="button" class="btn btn-danger  col-5  col-md-2">
-                              <i class="fas fa-times"></i>
-                              Excluir
-                            </button>
-                            <button type="button" class="btn btn-success offset-md-2 col-5 col-md-2 font-weight-bold">
-                              <i class="fas fa-check"></i>
-                              Salvar
-                            </button>
 
+                        </div>
+                        <div class="row">
+                          <div class="form-group col-md-3  col-6">
+                            <label>Celular</label>
+                            <input class="au-input au-input--full" type="text" name="Celular" placeholder="Celular"
+                              pattern="\([0-9]{2}\)[\s][0-9]{4}-[0-9]{4,5}" id="celular">
+                          </div>
+
+                          <div class="form-group col-md-3  col-6">
+                            <label>Telefone</label>
+                            <input class="au-input au-input--full" type="text" placeholder="Telefone" id="telefone"
+                              pattern="\([0-9]{2}\)[\s][0-9]{4}-[0-9]{4,5}">
+                          </div>
+                          <div class="form-group col-md-6">
+                            <label>Complemento</label>
+                            <input class="au-input au-input--full" type="text" name="Complemento"
+                              placeholder="Complemento" id="complemento">
                           </div>
 
                         </div>
+
+                        <div class="form-group row justify-content-center text-center mt-5 ">
+                          <button type="button" class="btn btn-danger  col-5  col-md-2" id="limpar_form">
+                            <i class="fas fa-times"></i>
+                            Limpar
+                          </button>
+                          <button type="button" class="btn btn-success offset-md-2 col-5 col-md-2 font-weight-bold"
+                            onclick="enviarCliente()">
+                            <i class="fas fa-check"></i>
+                            Salvar
+                          </button>
+
+                        </div>
+
+                      </div>
+                    </div>
+                  </div>
                 </form>
+
+                <div>
+                  <h3 class="text-center mt-2 mb-3">Clientes</h3>
+                  <div class="input-group col-12 col-md-6">
+                    <input class="form-control" type="text" name="">
+                    <div class="input-group-append">
+                      <button></button>
+                      <span class="input-group-text bg-black text-white btn" id="busca data">
+                        <i class="fas fa-search mr-1"></i>
+                        Filtrar Clientes</span>
+                    </div>
+                  </div>
+
+                </div>
                 <!-- DATA TABLE -->
 
-                <div class="bg-light table-responsive mt-5">
-                  <table class="table table-hover">
+                <div class="bg-light table-responsive mt-2">
+                  <table class="table table-hover bg-burguer-center table-fixed  border-cinza">
                     <thead class="bg-black text-white text-center">
                       <th scope="col">#</th>
                       <th scope="col">Nome</th>
@@ -163,6 +192,113 @@
                   </table>
                 </div>
                 <!-- END DATA TABLE -->
+                <!--Modal PRODUTO-->
+                <div class="modal fade bd-example-modal-lg" id="modal_cliente" tabindex="-1" role="dialog"
+                  aria-labelledby="modal_Cliente" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content border-cinza">
+                      <div class="modal-header bg-black">
+                        <h4 class="modal-title text-white text-center" id="modalCliente">Cliente</h4>
+                        <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body border-cinza ">
+                        <form action="" method="post">
+                          <div class="balcao-form pt-2">
+                            <div class="bg-burguer-center">
+                              <div class="container-fluid ">
+                                <div class="row">
+                                  <div class="form-group col-md-6">
+                                    <label>Cliente</label>
+                                    <input class="au-input au-input--full" type="text" name="cliente"
+                                      placeholder="Nome Cliente" id="modalNomeCliente">
+                                  </div>
+                                  <div class="form-group col-md-6">
+                                    <label>E-mail</label>
+                                    <input class="au-input au-input--full" type="text" name="email" placeholder="E-mail"
+                                      id="modalEmail">
+                                  </div>
+                                </div>
+                                <div class="row">
+                                  <div class="form-group col-md-6">
+                                    <label>Rua</label>
+                                    <input class="au-input au-input--full" type="text" name="rua" placeholder="Rua"
+                                      id="modalRua">
+                                  </div>
+
+                                  <div class="form-group col-md-6">
+                                    <label>Complemento</label>
+                                    <input class="au-input au-input--full" type="text" name="coplemento"
+                                      placeholder="Complemento" id="modalComplemento">
+                                  </div>
+
+                                </div>
+                                <div class="row">
+                                  <div class="form-group col-md-3">
+                                    <label>Bairro</label>
+                                    <input class="au-input au-input--full" type="text" name="bairro"
+                                      placeholder="Bairro" id="modalBairro">
+                                  </div>
+                                  <div class="form-group col-md-3">
+                                    <label>Cidade</label>
+                                    <input class="au-input au-input--full" type="text" name="cidade"
+                                      placeholder="Cidade" id="modalCidade">
+                                  </div>
+                                  <div class="form-group col-md-3">
+                                    <label>Número</label>
+                                    <input class="au-input au-input--full" type="text" name="numero"
+                                      placeholder="Número" id="modalNumero">
+                                  </div>
+                                  <div class="form-group col-md-3">
+                                    <label>CEP</label>
+                                    <input class="au-input au-input--full" type="text" name="cep" placeholder="CEP"
+                                      id="modalCep">
+                                  </div>
+
+                                </div>
+                                <div class="row">
+                                  <div class="form-group col-md-3  col-6">
+                                    <label>Celular</label>
+                                    <input class="au-input au-input--full" type="text" name="Celular"
+                                      placeholder="Celular" id="modalCelular">
+                                  </div>
+
+                                  <div class="form-group col-md-3  col-6">
+                                    <label>Telefone</label>
+                                    <input class="au-input au-input--full" type="text" name="Telefone"
+                                      placeholder="Telefone" id="modalTelefone">
+                                  </div>
+                                  <div class="form-group col-md-3 col-6">
+                                    <label>Data Cadastro</label>
+                                    <input class="au-input au-input--full" type="text" disabled id="modalData_cadastro">
+                                  </div>
+                                </div>
+
+                                <div class="form-group row justify-content-center text-center mt-5 ">
+                                  <button type="button" class="btn btn-danger col-5 col-md-2" data-dismiss="modal"
+                                    aria-label="Close">
+                                    <i class="fas fa-times"></i>
+                                    Fechar
+                                  </button>
+                                  <button type="button"
+                                    class="btn btn-success offset-md-2 col-5 col-md-2 font-weight-bold">
+                                    <i class="fas fa-check"></i>
+                                    Atualizar
+                                  </button>
+
+                                </div>
+
+                              </div>
+                            </div>
+                          </div>
+                        </form>
+
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
 
               </div>
             </div>
@@ -175,7 +311,6 @@
                       <span class="text-info">KD</span>
                       <span class="text-info">S</span>istema
                       <span class="text-info">G</span>erenciador
-
                     </p>
                   </div>
                 </div>
@@ -212,8 +347,40 @@
   <script src="js/main.js"></script>
 
   <script src="js/allpages.js"> </script>
+  <script src="js/clientes.js"></script>
+  <script src="js/utils/jquery.mask.js"></script>
+  <script src="js/utils/jquery.correios.min.js"></script>
+  <script>
+    $("#celular").mask("(00) 00000-0000");
+    $("#telefone").mask("(00) 0000-0000");
 
+    /*função cep correios*/
+    $("#cep").mask("00000-000");
+    var typingTimer; //timer identifier
+    var doneTypingInterval = 1000; //time in ms, 1 second for example
+    $("#cep").keydown(function () {
+      clearTimeout(typingTimer);
+      if ($('#cep').val) {
+        typingTimer = setTimeout(doneTyping, doneTypingInterval);
+      }
+    })
 
+    function doneTyping() {
+      let cep = $('#cep').val();
+      let httpCorreio =
+        ` https://webmaniabr.com/api/1/cep/${cep}/?app_key=Fx03yD7mTXbZ57X7LtdGjUW3l5eswMF9&app_secret=6WcBEPTDX9wzl90y7uBSaruT6tohhqWJe2I3wDYYI1s6aAi4`;
+
+      $.ajax({
+        url: httpCorreio,
+        type: 'GET'
+      }).then(function (response) { //
+        $("#bairro").val(response.bairro);
+        $("#endereco").val(response.endereco);
+        $("#cidade").val(response.cidade);
+        $("#uf").val(response.uf);
+      });
+    }
+  </script>
 </body>
 
 </html>
